# Speedy

./: .gitignore  AGENTS.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  PRD.md  README.md
.beads/: daemon-error  issues.jsonl
archive/: README.md
archive/repl/: command.rs  parser.rs
assets/fonts/: README.md
docs/: ARCHITECTURE.md  PRD.md
docs/designs/: 2026-01-23-task-2a4-file-loading-design.md
docs/investigations/: 2026-01-30-composite-rendering-investigation.md
docs/plans/: 2025-01-22-epic1-rsvp-terminal-engine.md  2026-01-22-epic2-series.md  2026-01-26-sentence-aware-navigation-design.md  2026-01-27-epic-3-visual-fixes-design.md  2026-01-27-task-2b1-tui-word-rendering-design-REVISED.md  2026-01-27-task-2b1-tui-word-rendering-implementation-REVISED.md  2026-01-28-Design Review Summary.md  2026-01-28-TUI Design Doc Revised.md  2026-01-28-TUI Design Doc v2.md  2026-01-28-epic-1-tui-foundation.md  2026-01-29-epic-2-code-reorganization.md  2026-01-30-composite-rendering-implementation-plan.md  2026-01-30-refactor-kitty-slimdown.md
src/: app.rs  lib.rs  main.rs  repl.rs
src/app/: app.rs  app_tests.rs  event.rs  mod.rs  mode.rs  render_state.rs  state.rs
src/audio/: mod.rs
src/engine/: cell_renderer.rs  config.rs  error.rs  font.rs  mod.rs  ovp.rs  renderer.rs  state.rs  timing.rs  viewport.rs
src/input/: clipboard.rs  epub.rs  mod.rs  pdf.rs
src/reading/: mod.rs  ovp.rs  state.rs  timing.rs  token.rs
src/rendering/: capability.rs  cell.rs  font.rs  kitty.rs  mod.rs  renderer.rs  viewport.rs
tests/: cell_renderer_integration.rs  integration_test.rs
(+27 files in other folders)
