[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
unicode-segmentation = "1.12"
unicode-width = "0.1"
pdf-extract = "0.10.0"
epub = "2.1.5"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
thiserror = "2.0.18"
ab_glyph = "0.2.32"
imageproc = "0.25"
base64 = "0.22"
lazy_static = "1.5"
